[project]
name = "quick"
version = "1.0.1"
description = ""
authors = [
    {name = "Shen Zhou", email = "shenz34206@hotmail.com"},
]
dependencies = ["click>=6.5", "pyqt5"]
requires-python = ">=3.7"
license = {text = "GPL"}

[project.optional-dependencies]
extra = [
    "qdarkstyle>=3.0.3",
]

[tool.pdm]


[tool.pdm.dev-dependencies]
dev = []

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
